# Portfolio.

./: .gitignore  README.md
Data Science/: Deep Learning 101.ipynb  Deep Learning.ipynb  Information theory and causal inference.ipynb  NLP.ipynb
Time series analysis /Liquidity prediction/: README.md
Time series analysis /Liquidity prediction/notebooks/: Breakpoint-finding.ipynb  Feature-selection.ipynb  Profit.ipynb  Summary.ipynb
Time series analysis /Value at Risk/: EDA.ipynb  Readme.md  modeling.ipynb
Time series analysis /Web ML App/: .gitignore  README.md  docker-compose.yml  pyproject.toml
Time series analysis /Web ML App/modules/: Dockerfile  requirements.txt
Time series analysis /Web ML App/modules/EDA /: EDA, feature engineering, ML models.ipynb
Time series analysis /Web ML App/modules/Metaflow/: dagflow.py
Time series analysis /Web ML App/modules/airflow/: airflowdag.py
Time series analysis /Web ML App/modules/app/crud operations/: crud.py
Time series analysis /Web ML App/modules/app/database/: database.py
Time series analysis /Web ML App/modules/app/dataingestion/: dataingestionnew.py
Time series analysis /Web ML App/modules/app/main/: main.py
Time series analysis /Web ML App/modules/app/models and schemas/: models.py  schemas.py
Time series analysis /Web ML App/modules/app/serializedmodels/: 20230420  20230425  20230428  20230523
Time series analysis /Web ML App/modules/app/templates/: form.html  form2.html
Time series analysis /Web ML App/modules/app/tests/: test_main.py
(+5 files in other folders)
