[tool.poetry]
name = "web-ml-app"
version = "0.1.0"
description = ""
authors = ["ProfessorBanner <121966431+ProfessorBanner@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_ml_app"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = ">=1.4.47,<1.5.0"
fastapi = ">=0.95.0,<0.96.0"
pydantic = ">=1.10.7,<1.11.0"
yfinance = ">=0.2.17,<0.3.0"
pandas = ">=1.4.4,<1.5.0"
matplotlib = ">=3.5.2,<3.6.0"
seaborn = ">=0.11.2,<0.12.0"
scikit-learn = ">=1.0.2,<1.1.0"
uvicorn = "0.21.1"
psycopg2 = "2.9.6"
python-multipart = "0.0.6"
jinja2 = "3.1.2"
joblib = ">=1.1.0,<1.2.0"
xgboost = ">=1.7.5,<1.8.0"
pathlib = ">=1.0.1,<1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
